<resources>
    <string name="app_name">Yamca</string>
    <string name="connect_server_ip">Server IP</string>
    <string name="connect_server_port">Server Port</string>
    <string name="connect_connect">Connect</string>
    <string name="connect_ip_hint">e.g. 127.0.0.1</string>
    <string name="connect_port_hint">e.g. 65535</string>
    <string name="pickuser_username">User Name</string>
    <string name="pickuser_username_hint">user1</string>
    <string name="pickuser_login">Login</string>
    <string name="pickuser_create">Create</string>
    <string name="topicpreview_unread">Unread</string>
    <string name="topiclist_speakabletext_addtopic">add topic</string>
    <string name="topiclist_speakabletext_search">search for topic</string>
    <string name="topiclist_speakabletext_preferences">preferences</string>
    <string name="createtopic_topicname">Topic Name</string>
    <string name="createtopic_topicname_hint">conversation1</string>
    <string name="createtopic_create_button">Create</string>
    <string name="searchfortopic_topicname">Topic Name</string>
    <string name="searchfortopic_topicname_hint">conversation1</string>
    <string name="searchfortopic_create_button">Search</string>
</resources>
