<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.PickUserActivity"
        android:orientation="vertical"
        android:id="@+id/pickuser_layout">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:clickable="false"
            android:textAlignment="inherit"
            android:id="@+id/pickuser_header_layout"
            android:background="#333333">

        <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/yamca_logo"
                android:id="@+id/pickuser_header_image"
                android:layout_marginTop="10dp"
                tools:ignore="ContentDescription" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pickuser_header_text"
                android:text="@string/app_name"
                android:textAlignment="inherit"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:layout_marginVertical="10dp" />

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="inherit"
            android:id="@+id/pickuser_scroll"
            android:background="#000"
            android:layout_gravity="center_horizontal"
            android:padding="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:textAlignment="inherit"
                android:id="@+id/pickuser_form_layout"
                android:background="#1A1A1A"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textAlignment="inherit"
                    android:id="@+id/pickuser_username_layout">

                <TextView
                        android:text="@string/pickuser_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickuser_username_text"
                        android:layout_margin="5dp"
                        android:textAlignment="inherit"
                        android:textSize="22sp"
                        android:textColor="#FBB03B"
                        android:padding="10dp" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:ems="10"
                        android:id="@+id/pickuser_username_input"
                        tools:text="username1"
                        android:textAlignment="inherit"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:importantForAutofill="no"
                        android:hint="@string/pickuser_username_hint"
                        android:background="#333333"
                        android:textColor="@android:color/white"
                        android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pickuser_buttons_layout"
                    android:layout_marginTop="20dp">

                <Button
                        android:text="@string/pickuser_login"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/pickuser_login_button"
                        android:textAlignment="inherit"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="15dp" />

                <Button
                        android:text="@string/pickuser_create"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/pickuser_create_button"
                        android:textAlignment="inherit"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
